# abfi

./: .gitignore  LICENSE  README.md  config.h.in  configure.ac
src/: Makefile.am  Makefile.in  abfi.c
tests/: ext_string1.b  ext_string2.b
