AC_INIT([abfi], [1.1])
AM_INIT_AUTOMAKE([foreign -Wall])
AC_PROG_CC
AC_CONFIG_SRCDIR(src/abfi.c)
AC_CHECK_HEADERS(string.h,,AC_MSG_ERROR(string.h missing))
AC_CHECK_HEADERS(stdio.h,,AC_MSG_ERROR(stdio.h missing))
AC_CHECK_HEADERS(stdlib.h,,AC_MSG_ERROR(stdlib.h missing))
AC_CHECK_FUNCS(strstr,,AC_MSG_ERROR(strstr not available))
AC_CHECK_FUNCS(strtok,,AC_MSG_ERROR(strtok not available))
AC_CHECK_FUNCS(malloc,,AC_MSG_ERROR(malloc not available))
AC_CHECK_FUNCS(free,,AC_MSG_ERROR(free not available))
AC_CHECK_FUNCS(strlen,,AC_MSG_ERROR(strlen not available))
AC_CHECK_FUNCS(fputc,,AC_MSG_ERROR(fputc not available))
AC_CHECK_FUNCS(fgetc,,AC_MSG_ERROR(fgetc not available))
AC_ARG_ENABLE(ext-string,[Enable string Extension],[AC_DEFINE([ENABLE_EXT_STRING],[1],[string Extension])])
AC_ARG_ENABLE(ext-pstderr,[Enable pstderr Extension],[AC_DEFINE([ENABLE_EXT_PSTDERR],[1],[pstderr Extension])])
AC_CONFIG_HEADERS([config.h])
AC_OUTPUT([Makefile src/Makefile])
